# tourism_agent

./: .codex_side_question_patch.diff  .codex_stream_fix.diff  .env.example  .filtered_orchestrator_stream.diff  .gitignore  AGENTS.md  Phase0_实验协议.md  README.md  docker-compose.yml  output.json  pyproject.toml  requirements.txt  result.json  test_api.py  test_backend.py  test_compile.py  test_qweather_api.py  test_qweather_auth.py  test_qweather_comprehensive.py  test_qweather_comprehensive2.py  test_qweather_debug.py  test_qweather_host_analysis.py  test_qweather_hosts.py  test_qweather_network.py  test_qweather_subscription.py  test_timing.py  test_weather_api_check.py  test_weather_env.py  test_weather_fix.py
.tmp_chrome_profile/: CrashpadMetrics-active.pma  Local State
.tmp_chrome_profile/Default/: History-journal  Web Data
.tmp_chrome_profile/GrShaderCache/: index
.tmp_chrome_profile/GraphiteDawnCache/: index
.tmp_chrome_profile/ShaderCache/: index
.tmp_chrome_profile3/: CrashpadMetrics-active.pma  Last Version  Local State
.tmp_chrome_profile3/Default/: BrowsingTopicsState  DIPS-wal  History  Network Action Predictor  Preferences  Secure Preferences  Web Data  passkey_enclave_state
.tmp_chrome_profile3/GrShaderCache/: data_1  index
.tmp_chrome_profile3/GraphiteDawnCache/: data_1  index
.tmp_chrome_profile3/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13420518457436439  UrlBilling.store  UrlBilling.store.4_13420518457452832  UrlCsdAllowlist.store  UrlCsdAllowlist.store.4_13420518457458568  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlHighConfidenceAllowlist.store.32_13420518457409711  UrlMalBin.store  UrlMalBin.store.4_13420518457432437  UrlMalware.store  UrlMalware.store.4_13420518457415069  UrlSoceng.store  UrlSubresourceFilter.store  UrlSubresourceFilter.store.4_13420518457468485  UrlSuspiciousSite.store  UrlSuspiciousSite.store.4_13420518457428559  UrlUws.store  UrlUws.store.4_13420518457422096
.tmp_chrome_profile3/ShaderCache/: data_1  index
.tmp_chrome_profile3/segmentation_platform/: ukm_db
app/: __init__.py  api.py  cli_presenter.py  cli_runner.py  main.py
app/agents/: __init__.py  attraction.py  base.py  budget.py  itinerary.py  orchestrator.py  planner.py  prompts.py  registry.py  review.py  unified_planner.py  weather.py
app/api/: __init__.py  gateway.py  main.py  optimized.py
app/core/: __init__.py  agent_cache.py  cache_monitor.py  config.py  context.py  di.py  experiment_demo.py  experiment_metrics.py  experiment_runner.py  fixed_data.py  goal_decision.py  goal_state_scheduler.py  llm_stats.py  logger.py  middleware.py  optimized_orchestrator.py  orchestration.py  rag.py  tool_executor.py  tool_strategy.py  tracing.py
app/planning/: __init__.py  constraint_solver.py  dynamic_replanner.py  enhanced_solver.py  multi_objective_optimizer.py
app/schemas/: __init__.py  experiment.py
app/scripts/: backup_restore.py  migrate_data.py  summarize_traces.py  vectorize_pois.py
app/services/: __init__.py  data_services.py  preference_service.py  recommendation_service.py  voice_service.py  weather_client.py
app/storage/: __init__.py  cache_manager.py  cache_strategy.py  database.py  models.py  repositories.py  session_store.py  vector_service.py  vector_store.py
app/tools/: base.py  (+5 more)
docs/: DATA_LAYER_REFACTORING.md  Day3_统一工具与输出协议.md  Day4_acceptance_report.md  Day4_goal_state_scheduler_rules.md  TRACE_FIELDS.md
experiments/: benchmark.json  benchmark_test.json  day4_scheduler_acceptance_cases.json  phase1_offline_cases.json  run_day4_acceptance.py  run_phase1_offline_acceptance.py  run_pilot.py
frontend/: .env.example  Dockerfile  README.md  components.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
tests/: test_budget_ticket_cost.py  test_experiment_runner.py  test_fixed_experiment_data.py  test_goal_decision.py  test_goal_state_scheduler.py  test_planner_rendering.py  test_planning_regressions.py  test_research_tools.py  test_tracing.py  test_weather_date_window.py
(+322 files in other folders)
